typos and item page start

--- a/content/psionics.html
+++ b/content/psionics.html
@@ -95,7 +95,7 @@
                       <th scope="col">Features</th>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">1st</th>
+                      <td class="text-center" scope="row">1st</td>
                       <td class="text-center">1</td>
                       <td>1 + Intelligence modifier</td>
                       <td class="text-center">2</td>
@@ -103,7 +103,7 @@
                       <td>Select a Psionic Discipline</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">2nd</th>
+                      <td class="text-center" scope="row">2nd</td>
                       <td class="text-center">1</td>
                       <td>1d4 + Intelligence modifier</td>
                       <td class="text-center">2</td>
@@ -111,7 +111,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">3rd</th>
+                      <td class="text-center" scope="row">3rd</td>
                       <td class="text-center">1</td>
                       <td>—</td>
                       <td class="text-center">3</td>
@@ -119,7 +119,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">4th</th>
+                      <td class="text-center" scope="row">4th</td>
                       <td class="text-center">1</td>
                       <td>—</td>
                       <td class="text-center">3</td>
@@ -127,7 +127,7 @@
                       <td>+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">5th</th>
+                      <td class="text-center" scope="row">5th</td>
                       <td class="text-center">2</td>
                       <td>1d4 + Intelligence modifier</td>
                       <td class="text-center">3</td>
@@ -135,7 +135,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">6th</th>
+                      <td class="text-center" scope="row">6th</td>
                       <td class="text-center">2</td>
                       <td>—</td>
                       <td class="text-center">3</td>
@@ -143,7 +143,7 @@
                       <td>Select a Psionic Talent</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">7th</th>
+                      <td class="text-center" scope="row">7th</td>
                       <td class="text-center">2</td>
                       <td>—</td>
                       <td class="text-center">4</td>
@@ -151,7 +151,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">8th</th>
+                      <td class="text-center" scope="row">8th</td>
                       <td class="text-center">2</td>
                       <td>1d4 + Intelligence modifier</td>
                       <td class="text-center">4</td>
@@ -159,7 +159,7 @@
                       <td>+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">9th</th>
+                      <td class="text-center" scope="row">9th</td>
                       <td class="text-center">2</td>
                       <td>—</td>
                       <td class="text-center">4</td>
@@ -167,7 +167,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">10th</th>
+                      <td class="text-center" scope="row">10th</td>
                       <td class="text-center">3</td>
                       <td>1d6 + Intelligence modifier</td>
                       <td class="text-center">4</td>
@@ -175,7 +175,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">11th</th>
+                      <td class="text-center" scope="row">11th</td>
                       <td class="text-center">5</td>
                       <td>—</td>
                       <td class="text-center">3</td>
@@ -183,7 +183,7 @@
                       <td>Select a Psionic Mastery</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">12th</th>
+                      <td class="text-center" scope="row">12th</td>
                       <td class="text-center">3</td>
                       <td>—</td>
                       <td class="text-center">5</td>
@@ -191,7 +191,7 @@
                       <td>+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">13th</th>
+                      <td class="text-center" scope="row">13th</td>
                       <td class="text-center">3</td>
                       <td>1d6 + Intelligence modifier</td>
                       <td class="text-center">5</td>
@@ -199,7 +199,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">14th</th>
+                      <td class="text-center" scope="row">14th</td>
                       <td class="text-center">3</td>
                       <td>—</td>
                       <td class="text-center">6</td>
@@ -207,7 +207,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">15th</th>
+                      <td class="text-center" scope="row">15th</td>
                       <td class="text-center">4</td>
                       <td>—</td>
                       <td class="text-center">6</td>
@@ -215,7 +215,7 @@
                       <td>Select a Psionic Talent</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">16th</th>
+                      <td class="text-center" scope="row">16th</td>
                       <td class="text-center">4</td>
                       <td>1d6 + Intelligence modifier</td>
                       <td class="text-center">6</td>
@@ -223,7 +223,7 @@
                       <td>+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">17th</th>
+                      <td class="text-center" scope="row">17th</td>
                       <td class="text-center">4</td>
                       <td>—</td>
                       <td class="text-center">6</td>
@@ -231,7 +231,7 @@
                       <td>Mastery Improvement</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">18th</th>
+                      <td class="text-center" scope="row">18th</td>
                       <td class="text-center">4</td>
                       <td>—</td>
                       <td class="text-center">7</td>
@@ -239,7 +239,7 @@
                       <td>—</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">19th</th>
+                      <td class="text-center" scope="row">19th</td>
                       <td class="text-center">4</td>
                       <td>1d8 + Intelligence modifier</td>
                       <td class="text-center">7</td>
@@ -247,7 +247,7 @@
                       <td>+1 Training Point, +1 Proficiency Point</td>
                     </tr>
                     <tr>
-                      <td class="text-center" scope="row">20th</th>
+                      <td class="text-center" scope="row">20th</td>
                       <td class="text-center">5</td>
                       <td>1d8 + Intelligence modifier</td>
                       <td class="text-center">7</td>
