--- a/content/training.html
+++ b/content/training.html
@@ -13,8 +13,8 @@
 
     <title>Training Points - Pergasha</title>
 </head>
-<body onload="trainingPage()">
-
+<body>
+<!--  onload="trainingPage()" -->
 
     <header>
 
@@ -144,16 +144,7 @@
                     <span class="class-nav-item">Force Shield</span><br>
                     <span class="class-nav-item badge badge-secondary badge-pill" >2</span>
                 </li>
-                <div class="collapse abilities trained-desc" id="ability-5" data-parent="#trained-abilities"><p class="p-4"><i>Requirements: Training in any Far Hand Discipline</i><br><br>&nbsp;&nbsp;&nbsp;&nbsp;You can overload your psychic focus to create a protective
-                barrier. As a reaction against an incoming non-psionic attack
-                (even if you are surprised), you create an invisible globe with
-                radius of 15 feet centered on you. Nothing physical can pass
-                the barrier until your next turn including attacks or creatures.
-                Projectiles stop in the middle of the air and fall to the ground,
-                and any creatures Large or smaller caught in or crossing the
-                barrier are pushed back 5 feet and knocked prone.<br>&nbsp;&nbsp;&nbsp;&nbsp;Your psychic focus immediately ends if it’s active, and you
-                can’t use it until you finish a short or long rest. You cannot use
-                this feature if you can’t use your psychic focus.</p></div>
+                <div class="collapse abilities trained-desc" id="ability-5" data-parent="#trained-abilities"><p class="p-4"><i>Requirements: Training in any Far Hand Discipline</i><br><br>&nbsp;&nbsp;&nbsp;&nbsp;You can overload your psychic focus to create a protective barrier. As a reaction against an incoming non-psionic attack (even if you are surprised), you create an invisible globe with radius of 15 feet centered on you. Nothing physical can pass the barrier until your next turn including attacks or creatures. Projectiles stop in the middle of the air and fall to the ground, and any creatures Large or smaller caught in or crossing the barrier are pushed back 5 feet and knocked prone.<br>&nbsp;&nbsp;&nbsp;&nbsp;Your psychic focus immediately ends if it’s active, and you can’t use it until you finish a short or long rest. You cannot use this feature if you can’t use your psychic focus.</p></div>
 
 
                 <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ability-6" id="trained-ability-6">
