Class links finished + scroll to top buttons

--- a/content/items.html
+++ b/content/items.html
@@ -2514,7 +2514,7 @@
 
                 </div>
     </div>
-
+    <button id="myBtn" title="Go to top">↑</button>
     
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
