--- a/content/classes.html
+++ b/content/classes.html
@@ -375,7 +375,7 @@
         </div>
       </div>
     </div>
-
+    <button id="myBtn" title="Go to top">↑</button> 
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
 
