--- a/pergasha.html
+++ b/pergasha.html
@@ -116,7 +116,7 @@
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
 
-    <script src="../pergasha.js"></script>
+    <script src="pergasha.js"></script>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
