locations + npc start

--- a/content/locations.html
+++ b/content/locations.html
@@ -67,9 +67,37 @@
 
     </header>
 
-    <h1 class="text-center mt-5">LOCATIONS</h1>
-    <div class="row justify-content-center mb-5"><img class="" src="../assets/logos/WIP-logo.png" alt="Work in Progress"></div>
 
+    <div class="d-flex flex-column" id="location-container">
+        <h1 class="text-center mt-5">LOCATIONS</h1>
+
+    <div class="card mb-3 w-50 align-self-center">
+        <img src="https://via.placeholder.com/500x60.png?text=Pergasha+Locations" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+
+      <div class="card mb-3 w-50 align-self-center">
+        <img src="https://via.placeholder.com/500x60.png?text=Pergasha+Locations" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card mb-3 w-50 align-self-center">
+        <img src="https://via.placeholder.com/500x60.png?text=Pergasha+Locations" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>  
+    </div>
+    
     
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
