layout for glyphs/npcs/locations and rules

--- a/content/glyphs.html
+++ b/content/glyphs.html
@@ -66,9 +66,34 @@
           </nav>
 
     </header>
+    <div class="d-flex flex-column" id="glyphs-container">
+        <h1 class="text-center mt-5">GLYPHS</h1>
+        <ul class="list-unstyled w-75 align-self-center">
+            <li class="media">
+              <img src="https://via.placeholder.com/100.png?text=Glyphs" class="mr-3" alt="...">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              </div>
+            </li>
+            <li class="media my-4">
+              <img src="https://via.placeholder.com/100.png?text=Glyphs" class="mr-3" alt="...">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              </div>
+            </li>
+            <li class="media">
+              <img src="https://via.placeholder.com/100.png?text=Glyphs" class="mr-3" alt="...">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              </div>
+            </li>
+          </ul>
+    </div>
+   
 
-    <h1 class="text-center mt-5">GLYPHS</h1>
-    <div class="row justify-content-center mb-5"><img class="" src="../assets/logos/WIP-logo.png" alt="Work in Progress"></div>
     
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
