--- a/content/npcs.html
+++ b/content/npcs.html
@@ -71,13 +71,13 @@
 
         <h1 class="text-center mt-5">NPCS</h1>
 
-    <form class="form-inline my-2 my-lg-0">
+    <form class="form-inline  align-self-center mb-5">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     <div class="card-columns w-75 align-self-center">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://via.placeholder.com/200x150.png?text=NPCs" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -94,7 +94,7 @@
           </blockquote>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://via.placeholder.com/200x150.png?text=NPCs" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://via.placeholder.com/200x150.png?text=NPCs" class="card-img-top" alt="...">
         </div>
         <div class="card p-3 text-right">
           <blockquote class="blockquote mb-0">
