Character page and filters

--- a/content/feats.html
+++ b/content/feats.html
@@ -49,11 +49,11 @@
                       References
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="locations.html">Locations</a>
-                      <a class="dropdown-item" href="items.html">Items</a>
-                      <a class="dropdown-item" href="npcs.html">Npcs</a>
-                    </div>
+                        <a class="dropdown-item" href="characters.html">Characters</a>
+                        <a class="dropdown-item" href="glyphs.html">Glyphs</a>
+                        <a class="dropdown-item" href="items.html">Items</a>
+                        <a class="dropdown-item" href="locations.html">Locations</a>
+                      </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="rules.html">Rules</a>
