--- a/pergasha.html
+++ b/pergasha.html
@@ -50,11 +50,11 @@
                       References
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="content/glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="content/locations.html">Locations</a>
-                      <a class="dropdown-item" href="content/items.html">Items</a>
-                      <a class="dropdown-item" href="content/npcs.html">Npcs</a>
-                    </div>
+                        <a class="dropdown-item" href="content/characters.html">Characters</a>
+                        <a class="dropdown-item" href="content/glyphs.html">Glyphs</a>
+                        <a class="dropdown-item" href="content/items.html">Items</a>
+                        <a class="dropdown-item" href="content/locations.html">Locations</a>
+                      </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="content/rules.html">Rules</a>
@@ -104,9 +104,9 @@
             <div><img class="shortcuts-icon" src="assets/icons/rules-logo.svg"></div>
             <h4>Rules</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="content/npcs.html">
-            <div><img class="shortcuts-icon pr-3" src="assets/icons/npcs-logo.svg"></div>
-            <h4>NPCs</h4>
+        <a class="shortcuts text-reset text-decoration-none" href="content/characters.html">
+            <div><img class="shortcuts-icon pr-3" src="assets/icons/characters-logo.svg"></div>
+            <h4>Characters</h4>
         </a>
         <a class="shortcuts text-reset text-decoration-none" href="content/locations.html">
             <div><img class="shortcuts-icon" src="assets/icons/locations-logo.svg"></div>
