--- a/content/glyphs.html
+++ b/content/glyphs.html
@@ -48,11 +48,11 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       References
                     </a>
-                    <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="characters.html">Characters</a>
                       <a class="dropdown-item" href="glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="locations.html">Locations</a>
                       <a class="dropdown-item" href="items.html">Items</a>
-                      <a class="dropdown-item" href="npcs.html">Npcs</a>
+                      <a class="dropdown-item" href="locations.html">Locations</a>
                     </div>
                 </li>
                 <li class="nav-item">
