--- a/content/locations.html
+++ b/content/locations.html
@@ -49,10 +49,10 @@
                       References
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="characters.html">Characters</a>
                       <a class="dropdown-item" href="glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="locations.html">Locations</a>
                       <a class="dropdown-item" href="items.html">Items</a>
-                      <a class="dropdown-item" href="npcs.html">Npcs</a>
+                      <a class="dropdown-item" href="locations.html">Locations</a>
                     </div>
                 </li>
                 <li class="nav-item">
