--- a/content/rules.html
+++ b/content/rules.html
@@ -50,10 +50,10 @@
                       References
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="characters.html">Characters</a>
                       <a class="dropdown-item" href="glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="locations.html">Locations</a>
                       <a class="dropdown-item" href="items.html">Items</a>
-                      <a class="dropdown-item" href="npcs.html">Npcs</a>
+                      <a class="dropdown-item" href="locations.html">Locations</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -119,12 +119,13 @@
     
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
-    <script>
-        $('testrules').scrollspy({ target: '#navbar-example3' })
-    </script>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script>
+      $('testrules').scrollspy({ target: '#navbar-example3' })
+  </script>
 </body>
 </html>
 
