Character template + Locations data-entry + setup

--- a/content/characters.html
+++ b/content/characters.html
@@ -85,6 +85,7 @@
           <button type="button" class="btn btn-outline-secondary btn-xs btn-tag " id="cloud" data-toggle="button" aria-pressed="false">Cloud Tribe</button>
           <button type="button" class="btn btn-outline-secondary btn-xs btn-tag " id="fire" data-toggle="button" aria-pressed="false">Fire Tribe</button>
           <button type="button" class="btn btn-outline-secondary btn-xs btn-tag " id="gem" data-toggle="button" aria-pressed="false">Gem Tribe</button>
+          <button type="button" class="btn btn-outline-secondary btn-xs btn-tag " id="ormican" data-toggle="button" aria-pressed="false">Ormican</button>
           <button type="button" class="btn btn-outline-secondary btn-xs btn-tag " id="sand" data-toggle="button" aria-pressed="false">Sand Tribe</button>
           <button type="button" class="btn btn-outline-secondary btn-xs btn-tag " id="stone" data-toggle="button" aria-pressed="false">Stone Tribe</button>
           <button type="button" class="btn btn-outline-secondary btn-xs btn-tag " id="storm" data-toggle="button" aria-pressed="false">Storm Tribe</button>
@@ -105,32 +106,31 @@
           <img src="../assets/characters/eoni.png" style="height: 380px; width: 300px;" alt="Eoni">
           <span class="character-name">Eoni</span>
           <div class="character-tag text-center">
-            <span class="badge badge-primary tribe-tag">Gem Tribe</span>
-            <span class="badge badge-secondary race-tag">Pergashan</span>
+            <span class="badge badge-secondary tribe-tag">Gem Tribe</span>
+            <span class="badge badge-info race-tag">Pergashan</span>
           </div>
         </div>
         <div class="flip-card-back">
-          <h1>Eoni</h1>
-          <p>Monk: Soul-Knife</p>
-          <p>Creepy</p>
+          <h4>Eoni</h4>
+          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
         </div>
       </div>
     </div> 
 
-    <div class="flip-card m-2 storm touched-kin">
+    <div class="flip-card m-2 ormican touched-kin">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="../assets/characters/barashtu.png" style="height: 380px; width: 300px;" >
           <span class="character-name">Barashtu</span>
-          <div class="character-tag text-center">
-            <span class="badge badge-primary tribe-tag">Storm Tribe</span>
-            <span class="badge badge-secondary race-tag">Touched-kin</span>
+          <div class="text-center">
+            <span class="badge badge-secondary">Ormican</span>
+            <span class="badge badge-info">Touched-kin</span>
           </div>
         </div>
         <div class="flip-card-back">
-          <h1>Barashtu</h1>
-          <p>Rogue: Psi-Assassin</p>
-          <p>High Skald</p>
+          <h4>Barashtu-kal-ammi</h4>
+          <i>High Skald</i>
+          <p class="p-1" style="font-size: 0.9rem;">A well-traveled storyteller and hunter of lost secrets from the fallen empire that once inhabited these lands, Barashtu is an individual filled with knowledge. They are also an incredibly powerful psionic, capable of many feats due to the psicrystal shards that glitter across their body. Their long history of travels has left plenty of secrets, though, and the depth of their involvement with the Ormicans is yet to be revealed...</p>
         </div>
       </div>
     </div> 
@@ -141,50 +141,14 @@
           <img src="../assets/characters/kalar.png" style="height: 380px; width: 300px;" >
           <span class="character-name">Kalar</span>
           <div class="character-tag text-center">
-            <span class="badge badge-primary tribe-tag">Sand Tribe</span>
-            <span class="badge badge-secondary race-tag">Touched-kin</span>
+            <span class="badge badge-secondary tribe-tag">Sand Tribe</span>
+            <span class="badge badge-info race-tag">Touched-kin</span>
           </div>
         </div>
         <div class="flip-card-back">
-          <h1>Kalar</h1>
-          <p>Ranger: Doppelkin Master</p>
-          <p>High Roaster</p>
-        </div>
-      </div>
-    </div> 
-
-    <div class="flip-card m-2 gem pergashan">
-      <div class="flip-card-inner">
-        <div class="flip-card-front">
-          <img src="../assets/characters/eoni.png" style="height: 380px; width: 300px;" alt="Eoni">
-          <span class="character-name">Eoni</span>
-          <div class="character-tag text-center">
-            <span class="badge badge-primary tribe-tag">Gem Tribe</span>
-            <span class="badge badge-secondary race-tag">Pergashan</span>
-          </div>
-        </div>
-        <div class="flip-card-back">
-          <h1>Eoni</h1>
-          <p>Monk: Soul-Knife</p>
-          <p>Creepy</p>
-        </div>
-      </div>
-    </div> 
-
-    <div class="flip-card m-2 storm touched-kin">
-      <div class="flip-card-inner">
-        <div class="flip-card-front">
-          <img src="../assets/characters/barashtu.png" style="height: 380px; width: 300px;" >
-          <span class="character-name">Barashtu</span>
-          <div class="character-tag text-center">
-            <span class="badge badge-primary tribe-tag">Storm Tribe</span>
-            <span class="badge badge-secondary race-tag">Touched-kin</span>
-          </div>
-        </div>
-        <div class="flip-card-back">
-          <h1>Barashtu</h1>
-          <p>Rogue: Psi-Assassin</p>
-          <p>High Skald</p>
+          <h4>Kalar</h4>
+          <i>High Roaster</i>
+          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
         </div>
       </div>
     </div> 
@@ -192,20 +156,90 @@
     <div class="flip-card m-2 sand touched-kin">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="../assets/characters/kalar.png" style="height: 380px; width: 300px;" >
-          <span class="character-name">Kalar</span>
+          <img src="https://via.placeholder.com/380x300.png?text=Valar" style="height: 380px; width: 300px;" >
+          <span class="character-name">Valar</span>
           <div class="character-tag text-center">
-            <span class="badge badge-primary tribe-tag">Sand Tribe</span>
-            <span class="badge badge-secondary race-tag">Touched-kin</span>
+            <span class="badge badge-secondary tribe-tag">Sand Tribe</span>
+            <span class="badge badge-info race-tag">Touched-kin</span>
           </div>
         </div>
         <div class="flip-card-back">
-          <h1>Kalar</h1>
-          <p>Ranger: Doppelkin Master</p>
-          <p>High Roaster</p>
+          <h4>Valar Nightwing</h4>
+          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="flip-card m-2 tribeless Lizardfolk">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="https://via.placeholder.com/380x300.png?text=Jax" style="height: 380px; width: 300px;" >
+          <span class="character-name">Jax</span>
+          <div class="character-tag text-center">
+            <span class="badge badge-secondary">Tribeless</span>
+            <span class="badge badge-info">Lizardfolk</span>
+          </div>
+        </div>
+        <div class="flip-card-back">
+          <h4>Jax</h4>
+          <i>Princess</i>
+          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
         </div>
       </div>
     </div> 
+
+    <div class="flip-card m-2 ormican touched-kin">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="https://via.placeholder.com/380x300.png?text=Jade" style="height: 380px; width: 300px;" >
+          <span class="character-name">Jade</span>
+          <div class="character-tag text-center">
+            <span class="badge badge-secondary">Ormican</span>
+            <span class="badge badge-info">Touched-kin</span>
+          </div>
+        </div>
+        <div class="flip-card-back">
+          <h4>Jade</h4>
+          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+        </div>
+      </div>
+    </div> 
+
+    <div class="flip-card m-2 TRIBE RACE">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="https://via.placeholder.com/380x300.png?text=Character" style="height: 380px; width: 300px;" >
+          <span class="character-name">Name</span>
+          <div class="character-tag text-center">
+            <span class="badge badge-secondary">Tribe</span>
+            <span class="badge badge-info">Race</span>
+          </div>
+        </div>
+        <div class="flip-card-back">
+          <h4>Full Name</h4>
+          <i>Title(s)</i>
+          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+        </div>
+      </div>
+    </div> 
+
+    <!-- <div class="flip-card m-2 TRIBE RACE">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="https://via.placeholder.com/380x300.png?text=Character" style="height: 380px; width: 300px;" >
+          <span class="character-name">Name</span>
+          <div class="character-tag text-center">
+            <span class="badge badge-secondary">Tribe</span>
+            <span class="badge badge-info">Race</span>
+          </div>
+        </div>
+        <div class="flip-card-back">
+          <h4>Full Name</h4>
+          <i>Title(s)</i>
+          <p class="p-1" style="font-size: 0.9rem;">Description/Bio</p>
+        </div>
+      </div>
+    </div>  -->
 
   </div>
  
